--- a/app/(pages)/(index-page)/_components/Hero/WhatIsHackdavis/WhatIsHackdavis.module.scss
+++ b/app/(pages)/(index-page)/_components/Hero/WhatIsHackdavis/WhatIsHackdavis.module.scss
@@ -185,7 +185,7 @@
     }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
     .container {
         .text {
             display: flex;
